# cob_people_perception

./: .gitignore  .travis.rosinstall  .travis.rosinstall.kinetic  .travis.yml  CMakeLists.txt  README  README.md  Readme.md  mainpage.dox  manifest.xml  nodelet_plugins.xml  openni_tracker.xml  package.xml  readme  stack.xml
cob_dual_leg_tracker/: CMakeLists.txt  package.xml  readme
cob_dual_leg_tracker/cfg/: DualTracker.cfg
cob_dual_leg_tracker/include/cob_dual_leg_tracker/: advanced_tracker_particle.h  config_struct.h  dual_tracker.h  leg_feature.h  people_particle_filter.h  people_tracker.h
cob_dual_leg_tracker/launch/: dual_tracker.launch  dual_tracker_cob.launch  dual_tracker_front.launch  dual_tracker_left.launch  dual_tracker_right.launch
cob_dual_leg_tracker/scripts/: 3dMin.py  gaitCheck.py  rmse.py  rmse2.py  ultimateGauss.py  visualizeLastRun.py
cob_dual_leg_tracker/src/: advanced_tracker_particle.cpp  dual_tracker.cpp  leg_feature.cpp  people_particle_filter.cpp  people_tracker.cpp
cob_dual_leg_tracker/src/association/: association.cpp
cob_dual_leg_tracker/src/distributions/: gaussian_pos_vel_mod.cpp  multivariate_gaussian_pos_vel.cpp
cob_dual_leg_tracker/src/jpda/: murty_demo.cpp
cob_dual_leg_tracker/src/kalman/: KalmanFilterDemo.cpp  kalman_filter.cpp
cob_dual_leg_tracker/src/models/: advanced_measmodel_pos.cpp  advanced_sysmodel_pos_vel.cpp  occlusion_model.cpp
cob_leg_detection/: CHANGELOG.rst  CMakeLists.txt  forestClassificator.yaml  package.xml
cob_leg_detection/cfg/: LegDetection.cfg  LegDetector.cfg  SimpleLegDetector.cfg  TrainingSetCreator.cfg
cob_leg_detection/config/: dualTracker.rviz  dualTracker_hardcoreDebug.rviz  dualTracker_socialInteractionDebug.rviz  leg_detector.rviz  tracking_debug.rviz
cob_leg_detection/include/benchmarking/: timer.h
cob_leg_detection/include/cob_leg_detection/: calc_leg_features.h  color_definitions.h  constants.h  leg_detector.h  saved_feature.h  training_set_converter.hpp
cob_leg_detection/launch/: filtered_leg_detector.launch  leg_detector.launch  shadows.launch
cob_leg_detection/msg/: ClusterMsg.msg  LabeledRangeScanMsg.msg
cob_leg_detection/src/: calc_leg_features.cpp  labeled_bag_file_to_svgs.cpp  laser_processor.cpp  leg_detector.cpp  leg_detector.cpp~  saved_feature.cpp  train_leg_detector.cpp  training_set_creator.cpp
cob_openni2_tracker/: CHANGELOG.rst  CMakeLists.txt  README.txt  nodelet.xml  openni2_tracker.xml  package.xml  readme.md
cob_openni2_tracker/launch/: body_tracker_nodelet.launch  body_tracker_params.yaml  create_nite2_link.bash  openni2_tracker.launch
cob_openni2_tracker/ros/src/: body_tracker.cpp  body_tracker_nodelet.cpp
cob_people_detection/: CHANGELOG.rst  CMakeLists.txt  Makefile  manifest.xml  nodelet_plugins.xml  package.xml  readme
cob_people_detection/action/: FaceDetector.action  Show.action  addData.action  deleteData.action  getDetections.action  loadModel.action  updateData.action
cob_people_detection/action/obsolete/: TrainCaptureSample.action  TrainContinuous.action
cob_people_detection/cfg/: sensor_message_gateway.cfg
cob_people_detection/common/src/: CuiPeopleDetector.cpp  HaardetectorUnitTest.cpp  PeopleDetector.cpp  PeopleDetectorMain.cpp  SSA.cpp  abstract_face_recognizer.cpp  decomposition.cpp  face_align_test.cpp  face_detector.cpp  face_normalizer.cpp  face_normalizer_test.cpp  face_recognition.cpp  face_recognizer.cpp  face_recognizer_algorithms.cpp  face_recognizer_algorithms_test.cpp  head_detector.cpp  helper.cpp  subspace_analysis.cpp  subspace_analysisNEW.cpp  subspace_analysis_fuerte.cpp  virtual_camera.cpp
cob_people_detection/msvc/: HaardetectorUnitTest.vcxproj.filters  PeopleDetector.sln  PeopleDetector.vcxproj
cob_people_detection/ros/launch/: coordinator.launch  coordinator_params.yaml  detection_tracker.launch  detection_tracker_params.yaml  face_capture.launch  face_detector.launch  face_detector_params.yaml  face_normalizer.launch  face_recognizer.launch  face_recognizer_params.yaml  fn_test.launch  head_detector.launch  head_detector_params.yaml  image_flip.launch  image_flip_nodelet.launch  image_flip_params.yaml  kinect_nodelet.launch  people_detection.launch  (+10 more)
cob_people_detection/scripts/: cvt_dat.py  db_eval.py  load_script.py  pvis.m  template.xml
cob_people_detection/srv/: DetectPeople.srv  captureImage.srv  finishRecording.srv  recognitionTrigger.srv
cob_people_detection_msgs/: CMakeLists.txt  mainpage.dox  manifest.xml  package.xml
cob_people_detection_msgs/msg/: BoundingBoxTree.msg  ColorDepthImage.msg  ColorDepthImageArray.msg  PeopleDetectionArray.msg
cob_people_fusion/: CMakeLists.txt  Readme.md  package.xml
cob_people_fusion/cfg/: detector_config_all.yaml
cob_people_fusion/launch/: people_fusion.launch  people_fusion_laser_only.launch
cob_people_fusion/msg/: DetectionExt.msg
cob_people_fusion/src/: fusion_node.cpp  fusion_node_main.cpp  state_pos_vel.cpp  tracker.cpp
cob_people_perception/: CHANGELOG.rst  CMakeLists.txt  package.xml
cob_people_tracking_filter/: CHANGELOG.rst  CMakeLists.txt  CMakeLists.txt~  package.xml  package.xml~
cob_people_tracking_filter/launch/: filter.launch  filter.launch~
cob_people_tracking_filter/src/: detector_particle.cpp  dual_sys_model.cpp  gaussian_pos_vel.cpp  gaussian_vector.cpp  leg_people_tracking_node.cpp  mcpdf_pos_vel.cpp  mcpdf_vector.cpp  measmodel_pos.cpp  measmodel_vector.cpp  people_tracking_node.cpp  sysmodel_pos_vel.cpp  sysmodel_vector.cpp  tracker_kalman.cpp  tracker_particle.cpp  uniform_vector.cpp
dlib/: CMakeLists.txt  Makefile.tarball  package.xml
dlib_face_detection/: CMakeLists.txt  package.xml
dlib_face_detection/launch/: detection_params.yaml  dlib_face_detection.launch
dlib_face_detection/msg/: RectArray.msg
dlib_face_detection/src/: detection_viewer.cpp  dlib_face_detection.cpp  face_detection_merge.cpp  head_detector.cpp  head_detector_node.cpp
libnite2/: CHANGELOG.rst  CMakeLists.txt  Makefile.tarball  NiTE-Linux-x64-2.2.tar.bz2.md5sum  package.xml
libnite2/cmake/: libnite2-extras.cmake.in
(+445 files in other folders)
