<package>
  <name>cob_dual_leg_tracker</name>
  <version>0.0.1</version>
  <description>Todo</description>
  <maintainer email="todo@todo.todo">Todo</maintainer>
  <license>Todo</license>
  <url></url>  

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>std_srvs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>laser_geometry</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>bfl</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>cob_leg_detection</build_depend>
  <build_depend>cob_people_tracking_filter</build_depend>
  <build_depend>cob_perception_msgs</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>std_srvs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>laser_geometry</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>bfl</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>image_geometry</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>laser_filters</run_depend>
  <run_depend>map_laser</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>cob_leg_detection</run_depend>
  <run_depend>cob_people_tracking_filter</run_depend>
  <run_depend>cob_perception_msgs</run_depend>
  

</package>