<?xml version="1.0"?>
<package format="2">
	<name>cob_openni2_tracker</name>
	<version>1.0.5</version>
	<description>
		The openni_tracker broadcasts the OpenNI skeleton frames using tf.
		This new version of the openni_tracker uses OpenNI2 and Nite2</description>
	<maintainer email="richard.bormann@ipa.fraunhofer.de">Richard Bormann</maintainer>
	
	<license>BSD</license>
	<url type="website">http://www.ros.org/wiki/openni_tracker</url>	
	<author email="marcus.liebhardt@yujinrobot.com">Marcus Liebhardt</author> 
	<author>Olha Meyer</author>

	<buildtool_depend>catkin</buildtool_depend>

	<depend>boost</depend>
	<depend>cob_perception_msgs</depend> 
	<depend>cv_bridge</depend>
	<depend>geometry_msgs</depend>
	<depend>glut</depend>
	<depend>image_transport</depend>
	<depend>opengl</depend>
	<depend>openni2_camera</depend>
	<depend>orocos_kdl</depend>
	<depend>libnite2</depend>
	<depend>libopencv-dev</depend>
	<!-- <depend>libopenni-nite-dev</depend> -->
	<!-- <depend>libopenni-sensor-primesense-dev</depend> -->
	<depend>libopenni2-dev</depend>
	<depend>libusb-1.0-dev</depend>
	<depend>libxi-dev</depend>
	<depend>libxmu-dev</depend>
	<depend>roscpp</depend>
	<depend>roslib</depend>
	<depend>sensor_msgs</depend>
	<depend>std_msgs</depend>
	<depend>tf</depend>
	<depend>nodelet</depend>
	<depend>pcl_ros</depend>
	<depend>visualization_msgs</depend>

	<!--exec_depend>libopenni-nite-dev</exec_depend> -->
	<!--exec_depend>libopenni-sensor-primesense-dev</exec_depend-->
	<exec_depend>message_runtime</exec_depend>
	
	<export>
		<nodelet plugin="${prefix}/nodelet.xml" />	
	</export>
	
</package>
